Fix spacing on create page

--- a/src/App.css
+++ b/src/App.css
@@ -29,18 +29,19 @@
 }
 
 /* Forms */
-.stepForm {
+.create-container {
+  width: 70%;
+  margin: 0 auto;
+}
+
+.step-form {
   display: flex;
   flex-direction: column;
   margin: 2px;
 }
 
-.title {
-  margin: 4px;
-}
-
-.desc {
-  margin: 4px;
+.minus-button {
+  transform: translate(0, 33%);
 }
 
 /* Confirm Popup */
